test: format